[gd_scene load_steps=10 format=3 uid="uid://u0xtsifnnjb"]

[ext_resource type="Script" uid="uid://pvr5pwfkxu6c" path="res://scripts/characters/player/pixel_player.gd" id="1_rejtb"]
[ext_resource type="Texture2D" uid="uid://clt3b4qqcti6w" path="res://assets/new_sprites/tilemap/Tiles/Characters/tile_0000.png" id="2_oq18y"]
[ext_resource type="Texture2D" uid="uid://bv14umj2ya64n" path="res://assets/new_sprites/tilemap/Tiles/Characters/tile_0001.png" id="3_o0foe"]
[ext_resource type="AudioStream" uid="uid://dxcm3pcmo2rj6" path="res://assets/sounds/jump.wav" id="7_gy763"]
[ext_resource type="AudioStream" uid="uid://c0w3mudnsf1xt" path="res://assets/sounds/player_death.wav" id="8_5n6lm"]
[ext_resource type="AudioStream" uid="uid://bn7hjnftxvadj" path="res://assets/sounds/player_shoot.wav" id="9_s4uju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4se6"]
size = Vector2(20, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_haiwr"]
atlas = ExtResource("2_oq18y")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xnwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haiwr")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0foe")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oq18y")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0foe")
}],
"loop": true,
"name": &"double_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oq18y")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0foe")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oq18y")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0foe")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oq18y")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0foe")
}],
"loop": false,
"name": &"shoot",
"speed": 12.0
}]

[node name="pixel_player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_rejtb")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_s4se6")

[node name="animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3xnwo")
animation = &"shoot"
autoplay = "run"

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gy763")

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5n6lm")

[node name="shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_s4uju")

[node name="projectile_position" type="Node2D" parent="."]
position = Vector2(13, -7)
